# Falcon-emsim

./: .gitignore  README.md  pyproject.toml
docs/: README.md  editor.js  engine.js  gif.js  index.html  main.js  worker.js
docs/wheels/: emsim-0.1.0-py3-none-any.whl
emsim/: __init__.py  config.py  io.py  materials.py  plotting.py  refine.py  results.py  scene.py  thermal.py  web.py
emsim/analytic/: __init__.py  round_wire.py  two_wire.py
emsim/fem/: __init__.py  assembly.py  constraints.py  elements.py  shapes.py
emsim/geometry/: __init__.py  model.py  shapes.py
emsim/gui/: __init__.py  __main__.py  app.py  canvas.py  mainwindow.py  panels.py  results.py
emsim/mesh/: __init__.py  gmsh_backend.py  kelvin.py  mesh.py  py_backend.py
emsim/post/: __init__.py  animate.py  emi.py  energy.py  estimator.py  fields.py  forces.py  losses.py
emsim/solve/: __init__.py  linear.py  solver.py
scripts/: build_web.py
validation/: test_adaptive.py  test_current_sharing.py  test_emi_forces.py  test_enclosure.py  test_gui.py  test_io_export.py  test_kelvin.py  test_p2.py  test_py_backend.py  test_round_wire.py
